# LEX

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  configuration.md  syntax.md
cmake/: uninstall.cmake.in
docs/: configs.md
resources/: README.md  bundle.h  bundler.c
resources/syntax/: sql.json
resources/themes/: Gruvbox.Dark  Nord.Theme  One.Dark.Pro  Tokyo.Night  dark.theme  dracula.Theme  light.theme  monokai.theme  ms-dos.theme  solarized.theme
src/: action.c  action.h  buildnum.c  buildnum.h  common.h  config.c  config.h  editor.c  editor.h  file_io.c  file_io.h  highlight.c  highlight.h  input.c  input.h  json.h  lex.c  opt.h  os.h  os_unix.c  os_unix.h  os_win32.c  os_win32.h  output.c  output.h  prompt.c  prompt.h  row.c  row.h  select.c  select.h  terminal.c  terminal.h  unicode.c  unicode.h  utils.c  utils.h
